@@ -37,16 +37,47 @@ mvn -pl mars-cloud-upms-service -am clean package
 
 | 服务 | 生产式启动 | 本地开发启动 |
 | --- | --- | --- |
-| `mars-cloud-upms-service` | `java -jar target/mars-cloud-upms-service.jar` | `cd mars-cloud-upms-service && ./run-local.sh` |
+| `mars-cloud-upms-service` | `java --sun-misc-unsafe-memory-access=allow -jar target/mars-cloud-upms-service.jar` | `cd mars-cloud-upms-service && ./run-local.sh` |
 | `mars-cloud-sample-service` | `java -jar target/mars-cloud-sample-service.jar` | `cd mars-cloud-sample-service && ./run-local.sh` |
 
 `run-local.sh` 会加载模块根目录的 `.env`（若存在）并以 local profile 启动。
 UPMS 需要其中的 Nacos Namespace 与账号；sample service 不需要 Nacos 参数。
+UPMS 的启动命令多出的 JVM 参数见下一节。
 
 > **`java -jar` 不会读 `.env`。** Spring Boot 本身没有 `.env` 支持——应用读的是
 > **环境变量**；`mvn spring-boot:run`（即 `run-local.sh`）只是恰好会加载模块根目录的
 > `.env`。生产环境请把变量真正注入进程（编排平台的 secret、systemd `EnvironmentFile`、
 > 容器 env 等），不要指望 `.env` 文件。
+
+## JVM 参数
+
+接入 Nacos 的服务（当前是 UPMS）在 JDK 24 及以上启动时必须带：
+
+```
+--sun-misc-unsafe-memory-access=allow
+```
+
+原因：Spring Cloud Alibaba 2025.1 托管的 nacos-client 3.1.1 内部 shade 了 Guava，
+后者调用 `sun.misc.Unsafe` 的内存访问方法。JDK 24 起（JEP 498）默认在首次调用时向
+标准错误打印一组以 `WARNING: A terminally deprecated method in sun.misc.Unsafe has been called`
+开头的弃用警告，后续 JDK 版本会先改为 `debug` 再改为 `deny`。这是 nacos 上游问题
+（[nacos#14070](https://github.com/alibaba/nacos/issues/14070)），不是本仓代码调用了 `Unsafe`；
+这个参数是 JDK 给出的规避方式，效果是把该次调用当作允许，不再打印警告。
+
+参数分别固化在每一类启动入口，不依赖运行者记得：
+
+| 入口 | 固化位置 |
+| --- | --- |
+| `mvn spring-boot:run`（含 `run-local.sh`） | 框架 BOM `mars-cloud-dependencies` 的 `pluginManagement` 统一给 `spring-boot-maven-plugin` 配置 `jvmArguments`，本仓不需要再写 |
+| 容器 | 模块 `Dockerfile` 的 `ENTRYPOINT`，由 `NacosIntegrationContractTest` 守护 |
+| 手工 `java -jar` | 见上表的启动命令，需要自己写上 |
+| IDE 直接运行主类 | IDE 不经过 Maven 插件，需在运行配置的 VM options 里自行加上 |
+| Maven 进程本身（编译期） | 仓根 `.mvn/jvm.config`。这一处针对的是 Lombok 在 JDK 24 及以上编译期的同一条警告，与 Nacos 无关；它只作用于 Maven 进程 |
+
+测试 JVM 不需要这个参数：测试明确离线（见「Profile 语义」），Nacos 客户端不会被调用，
+也就不会触发这组警告。
+
+不接入 Nacos 的服务（当前是 sample service）不需要它；加上也无害。
 
 ## 配置来源与优先级
 
@@ -114,7 +145,8 @@ UPMS 的 `/actuator/info` 只增加 `nacos.configRevision`，用于观察动态�
 排查时先看是哪个组件：
 
 ```bash
-java -jar mars-cloud-upms-service.jar --management.endpoint.health.show-details=always
+java --sun-misc-unsafe-memory-access=allow -jar mars-cloud-upms-service.jar \
+  --management.endpoint.health.show-details=always
 ```
 
 **上线前建议把 actuator 的暴露面收窄**，只留 health 与 info：
